--- a/packages/oauth-entra-id/package.json
+++ b/packages/oauth-entra-id/package.json
@@ -51,7 +51,10 @@
       ]
     }
   },
-  "files": ["dist","README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "sideEffects": false,
   "scripts": {
     "build": "tsup",
