--- a/frontends/react18/package.json
+++ b/frontends/react18/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "typecheck": "tsc --noEmit",
-    "lint": "eslint src/"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -25,8 +24,6 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.13.10",
     "@types/react": "^18.3.18",
@@ -35,20 +32,12 @@
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "react-router-dom": "^6.30.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "terser": "^5.39.0",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
     "vite": "^5.4.14"
   }
 }
