--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["node_modules", "dist", "build", "coverage", ".turbo", ".turbo/**"]
+    "ignore": ["node_modules", "dist", "build", "coverage", ".turbo", ".turbo/**", "routeTree.gen.ts"]
   },
   "formatter": {
     "enabled": true,
