--- a/frontends/react/public/manifest.json
+++ b/frontends/react/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "OAuth Entra ID",
+  "name": "OAuth Entra ID",
   "icons": [
     {
       "src": "favicon.ico",
