--- a/frontends/react/package.json
+++ b/frontends/react/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/react-form": "^1.2.4",
     "@tanstack/react-router": "^1.114.29",
     "@tanstack/react-router-devtools": "^1.114.31",
     "@tanstack/router-plugin": "^1.114.31",
