--- a/frontends/react/package.json
+++ b/frontends/react/package.json
@@ -27,6 +27,7 @@
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
+    "react-scan": "^0.3.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
     "tailwindcss-animate": "^1.0.7",
