--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,16 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
 
-  "cSpell.words": ["entra", "fastify", "frontends", "honojs", "msal", "partialize", "PKCE", "vite"]
+  "cSpell.words": [
+    "elysia",
+    "elysiajs",
+    "entra",
+    "fastify",
+    "frontends",
+    "honojs",
+    "msal",
+    "partialize",
+    "PKCE",
+    "vite"
+  ]
 }
