--- a/servers/fastify/package.json
+++ b/servers/fastify/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "tsx watch --clear-screen=false src/index.ts",
@@ -10,21 +11,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "oauth-entra-id": "workspace:*",
     "@fastify/cookie": "^11.0.2",
-    "@fastify/cors": "^10.1.0",
+    "@fastify/cors": "^11.0.1",
     "@fastify/formbody": "^8.0.2",
-    "@fastify/helmet": "^12.0.1",
+    "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.2.2",
-    "@sinclair/typebox": "^0.33.22",
+    "@sinclair/typebox": "^0.34.33",
     "dotenv": "^16.4.7",
-    "fastify": "^5.2.1",
+    "fastify": "^5.2.2",
+    "oauth-entra-id": "workspace:*",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.14.0",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   }
 }
