--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,8 @@ FASTIFY_PORT=3003
 HONOJS_URL=http://localhost:3004
 HONOJS_PORT=3004
 
+ELYSIA_URL=http://localhost:3005
+ELYSIA_PORT=3005
+
 # Frontends
 REACT_FRONTEND_URL=http://localhost:5000
