New App Regs and seperation for colors

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,28 @@
 
 # Global 
 NODE_ENV=development
-SECRET_KEY=dummy
 REVERSE_PROXIES=0
 
-# Entra ID
-AZURE_CLIENT_ID=dummy
-AZURE_TENANT_ID=dummy
-AZURE_CLIENT_SCOPES=dummy dummy
-AZURE_CLIENT_SECRET=dummy
+# Entra ID Primary - 🔵 Blue (HonoJS)
+SECRET_KEY1=dummy
+AZURE1_CLIENT_ID=dummy
+AZURE1_TENANT_ID=dummy
+AZURE1_CLIENT_SCOPES=dummy dummy
+AZURE1_CLIENT_SECRET=dummy
+
+# Entra ID Secondary - 🔴 Red (Fastify and NestJS)
+SECRET_KEY2=dummy
+AZURE2_CLIENT_ID=dummy
+AZURE2_TENANT_ID=dummy
+AZURE2_CLIENT_SCOPES=dummy dummy
+AZURE2_CLIENT_SECRET=dummy
+
+# Entra ID Tertiary - 🟡 Yellow (Express)
+SECRET_KEY3=dummy
+AZURE3_CLIENT_ID=dummy
+AZURE3_TENANT_ID=dummy
+AZURE3_CLIENT_SCOPES=dummy dummy
+AZURE3_CLIENT_SECRET=dummy
 
 # Servers
 EXPRESS_URL=http://localhost:3001
