--- a/demos/frontend-react/package.json
+++ b/demos/frontend-react/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-toggle-group": "^1.1.7",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-form": "^1.3.0",
     "@tanstack/react-router": "^1.115.0",
