feature: OnBehalfOf Flow for multipule servers in one time

--- a/.env.example
+++ b/.env.example
@@ -5,25 +5,25 @@ NODE_ENV=development
 REVERSE_PROXIES=0
 
 # Entra ID Primary - 🔵 Blue (HonoJS)
-SECRET_KEY1=dummy
-AZURE1_CLIENT_ID=dummy
-AZURE1_TENANT_ID=dummy
-AZURE1_CLIENT_SCOPES=dummy dummy
-AZURE1_CLIENT_SECRET=dummy
+BLUE_SECRET_KEY=dummy
+BLUE_AZURE_CLIENT_ID=dummy
+BLUE_AZURE_TENANT_ID=dummy
+BLUE_AZURE_CLIENT_SCOPE=dummy dummy
+BLUE_AZURE_CLIENT_SECRET=dummy
 
 # Entra ID Secondary - 🔴 Red (Fastify and NestJS)
-SECRET_KEY2=dummy
-AZURE2_CLIENT_ID=dummy
-AZURE2_TENANT_ID=dummy
-AZURE2_CLIENT_SCOPES=dummy dummy
-AZURE2_CLIENT_SECRET=dummy
+RED_SECRET_KEY=dummy
+RED_AZURE_CLIENT_ID=dummy
+RED_AZURE_TENANT_ID=dummy
+RED_AZURE_CLIENT_SCOPE=dummy dummy
+RED_AZURE_CLIENT_SECRET=dummy
 
 # Entra ID Tertiary - 🟡 Yellow (Express)
-SECRET_KEY3=dummy
-AZURE3_CLIENT_ID=dummy
-AZURE3_TENANT_ID=dummy
-AZURE3_CLIENT_SCOPES=dummy dummy
-AZURE3_CLIENT_SECRET=dummy
+YELLOW_SECRET_KEY=dummy
+YELLOW_AZURE_CLIENT_ID=dummy
+YELLOW_AZURE_TENANT_ID=dummy
+YELLOW_AZURE_CLIENT_SCOPE=dummy dummy
+YELLOW_AZURE_CLIENT_SECRET=dummy
 
 # Servers
 EXPRESS_URL=http://localhost:3001
