--- a/demos/frontend-react/package.json
+++ b/demos/frontend-react/package.json
@@ -30,6 +30,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-scan": "^0.3.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
