--- a/demos/server-honojs/package.json
+++ b/demos/server-honojs/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
+    "@hono/zod-validator": "^0.4.3",
     "dotenv": "^16.5.0",
     "hono": "^4.7.7",
     "hono-rate-limiter": "^0.4.2",
