--- a/demos/server-fastify/package.json
+++ b/demos/server-fastify/package.json
@@ -16,6 +16,7 @@
     "@fastify/formbody": "^8.0.2",
     "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.2.2",
+    "@fastify/type-provider-typebox": "^5.1.0",
     "@sinclair/typebox": "^0.34.33",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
