--- a/demos/frontend-react/package.json
+++ b/demos/frontend-react/package.json
@@ -18,11 +18,13 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@tailwindcss/vite": "^4.1.4",
-    "@tanstack/react-form": "^1.6.3",
-    "@tanstack/react-router": "^1.117.0",
-    "@tanstack/react-router-devtools": "^1.117.0",
-    "@tanstack/router-plugin": "^1.117.0",
-    "axios": "^1.8.4",
+    "@tanstack/react-form": "^1.8.0",
+    "@tanstack/react-query": "^5.74.7",
+    "@tanstack/react-query-devtools": "^5.74.7",
+    "@tanstack/react-router": "^1.117.1",
+    "@tanstack/react-router-devtools": "^1.117.1",
+    "@tanstack/router-plugin": "^1.117.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
