--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ BLUE_AZURE_CLIENT_ID=dummy
 BLUE_AZURE_TENANT_ID=dummy
 BLUE_AZURE_CLIENT_SCOPE=dummy dummy
 BLUE_AZURE_CLIENT_SECRET=dummy
+BLUE_AZURE_CLIENT_EXPOSED_SCOPE=dummy
 
 # Entra ID Secondary - 🔴 Red (Fastify and NestJS)
 RED_SECRET_KEY=dummy
@@ -17,6 +18,7 @@ RED_AZURE_CLIENT_ID=dummy
 RED_AZURE_TENANT_ID=dummy
 RED_AZURE_CLIENT_SCOPE=dummy dummy
 RED_AZURE_CLIENT_SECRET=dummy
+RED_AZURE_CLIENT_EXPOSED_SCOPE=dummy
 
 # Entra ID Tertiary - 🟡 Yellow (Express)
 YELLOW_SECRET_KEY=dummy
@@ -24,6 +26,7 @@ YELLOW_AZURE_CLIENT_ID=dummy
 YELLOW_AZURE_TENANT_ID=dummy
 YELLOW_AZURE_CLIENT_SCOPE=dummy dummy
 YELLOW_AZURE_CLIENT_SECRET=dummy
+YELLOW_AZURE_CLIENT_EXPOSED_SCOPE=dummy
 
 # Servers
 EXPRESS_URL=http://localhost:3001
