--- a/examples/server-honojs/package.json
+++ b/examples/server-honojs/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hono/node-server": "^1.14.1",
     "@hono/zod-validator": "^0.5.0",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "hono": "^4.7.9",
     "hono-rate-limiter": "^0.4.2",
@@ -20,7 +21,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.18",
     "tsup": "^8.4.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
