--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
-  "eslint.enable": false,
-  "prettier.enable": false,
-
   "biome.enabled": true,
 
   "editor.defaultFormatter": "biomejs.biome",
@@ -43,7 +40,7 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[markdown]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[html]": {
     "editor.defaultFormatter": "biomejs.biome"
