--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "format": "pnpm biome format --write .",
     "lint": "pnpm biome lint --write .",
     "check": "pnpm biome check --write .",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "husky": "^9.1.7",
     "turbo": "^2.5.3"
   },
-  "packageManager": "pnpm@10.7.1",
+  "packageManager": "pnpm@10.11.0",
   "engines": {
     "node": ">=22"
   }
