--- a/biome.jsonc
+++ b/biome.jsonc
@@ -25,7 +25,7 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noExplicitAny": "info"
+        "noExplicitAny": "off" // Needed for generic types in TypeScript
       }
     }
   },
