--- a/packages/oauth-entra-id/package.json
+++ b/packages/oauth-entra-id/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oauth-entra-id",
   "version": "2.0.0-beta.2",
-  "description": "🛡️ Secure and simple way to implement OAuth 2.0 with Microsoft Entra ID",
+  "description": "🛡️ Simple and Secure Way to Implement OAuth 2.0 with Microsoft Entra ID",
   "homepage": "https://github.com/oauth-entra-id/oauth-entra-id",
   "repository": {
     "type": "git",
@@ -82,14 +82,12 @@
   "license": "MIT",
   "keywords": [
     "auth",
-    "oauth",
+    "oauth2",
     "typescript",
     "microsoft",
     "entra-id",
-    "azure-ad",
     "azure",
-    "msal",
-    "jsonwebtoken",
+    "jwt",
     "express",
     "nestjs"
   ]
