feat: compress added, vitest tests added too

--- a/packages/oauth-entra-id/package.json
+++ b/packages/oauth-entra-id/package.json
@@ -56,12 +56,14 @@
     "build": "tsup",
     "prepare": "npm run build",
     "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest"
   },
   "dependencies": {
     "@azure/msal-node": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
+    "pako": "^2.1.0",
     "zod": "^3.25.45"
   },
   "peerDependencies": {
@@ -76,8 +78,10 @@
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.29",
+    "@types/pako": "^2.0.3",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.4"
   },
   "license": "MIT",
   "keywords": ["auth", "oauth2", "typescript", "microsoft", "entra-id", "azure", "jwt", "express", "nestjs"]
