--- a/.env.example
+++ b/.env.example
@@ -4,29 +4,53 @@
 NODE_ENV=development
 REVERSE_PROXIES=0
 
-# Entra ID Primary - 🔵 Blue (HonoJS)
+# Entra ID 1st - 🔵 Blue
 BLUE_SECRET_KEY=dummy
 AZURE_BLUE_CLIENT_ID=dummy
 AZURE_BLUE_TENANT_ID=dummy
-AZURE_BLUE_CUSTOM_SCOPE=dummy dummy
+AZURE_BLUE_CUSTOM_SCOPE=dummy
 AZURE_BLUE_CLIENT_SECRET=dummy
 AZURE_BLUE_EXPOSED_SCOPE=dummy
 
-# Entra ID Secondary - 🔴 Red (Fastify and NestJS)
+# Entra ID 2nd - 🔴 Red
 RED_SECRET_KEY=dummy
 AZURE_RED_CLIENT_ID=dummy
 AZURE_RED_TENANT_ID=dummy
-AZURE_RED_CUSTOM_SCOPE=dummy dummy
+AZURE_RED_CUSTOM_SCOPE=dummy
 AZURE_RED_CLIENT_SECRET=dummy
 AZURE_RED_EXPOSED_SCOPE=dummy
 
-# Entra ID Tertiary - 🟡 Yellow (Express)
+# Entra ID 3rd - 🟡 Yellow
 YELLOW_SECRET_KEY=dummy
 AZURE_YELLOW_CLIENT_ID=dummy
 AZURE_YELLOW_TENANT_ID=dummy
-AZURE_YELLOW_CUSTOM_SCOPE=dummy dummy
+AZURE_YELLOW_CUSTOM_SCOPE=dummy
 AZURE_YELLOW_CLIENT_SECRET=dummy
 AZURE_YELLOW_EXPOSED_SCOPE=dummy
+
+# Entra ID 4th - 🟢 Green
+GREEN_SECRET_KEY=dummy
+AZURE_GREEN_CLIENT_ID=dummy
+AZURE_GREEN_TENANT_ID=dummy
+AZURE_GREEN_CUSTOM_SCOPE=dummy
+AZURE_GREEN_CLIENT_SECRET=dummy
+AZURE_GREEN_EXPOSED_SCOPE=dummy
+
+# Entra ID 5th - 🟠 Orange
+ORANGE_SECRET_KEY=dummy
+AZURE_ORANGE_CLIENT_ID=dummy
+AZURE_ORANGE_TENANT_ID=dummy
+AZURE_ORANGE_CUSTOM_SCOPE=dummy
+AZURE_ORANGE_CLIENT_SECRET=dummy
+AZURE_ORANGE_EXPOSED_SCOPE=dummy
+
+# Entra ID 6th - 🟣 Purple
+PURPLE_SECRET_KEY=dummy
+AZURE_PURPLE_CLIENT_ID=dummy
+AZURE_PURPLE_TENANT_ID=dummy
+AZURE_PURPLE_CUSTOM_SCOPE=dummy
+AZURE_PURPLE_CLIENT_SECRET=dummy
+AZURE_PURPLE_EXPOSED_SCOPE=dummy
 
 # Servers
 EXPRESS_URL=http://localhost:3001
