--- a/packages/oauth-entra-id/package.json
+++ b/packages/oauth-entra-id/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oauth-entra-id",
   "version": "3.1.0-beta.0",
-  "description": "🛡️ Simple and Secure Way to Implement OAuth 2.0 with Microsoft Entra ID",
+  "description": "🛡️ A secure, performant, and feature-rich OAuth 2.0 integration for Microsoft Entra ID — fully abstracted and production-ready.",
   "homepage": "https://github.com/oauth-entra-id/oauth-entra-id",
   "repository": {
     "type": "git",
