--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,49 @@
-# Global Servers ENV file
-
 # Global 
 NODE_ENV=development
 REVERSE_PROXIES=0
+TENANT_IN_USE=dummy
 
-# Entra ID 1st - 🔵 Blue
-BLUE_SECRET_KEY=dummy
-AZURE_BLUE_CLIENT_ID=dummy
-AZURE_BLUE_TENANT_ID=dummy
-AZURE_BLUE_CUSTOM_SCOPE=dummy
-AZURE_BLUE_CLIENT_SECRET=dummy
-AZURE_BLUE_EXPOSED_SCOPE=dummy
+A_SECRET_KEY=dummy
+A_AZURE_CLIENT_ID=dummy
+A_AZURE_TENANT_ID=dummy
+A_AZURE_CUSTOM_SCOPE=dummy
+A_AZURE_CLIENT_SECRET=dummy
+A_AZURE_EXPOSED_SCOPE=dummy
 
-# Entra ID 2nd - 🔴 Red
-RED_SECRET_KEY=dummy
-AZURE_RED_CLIENT_ID=dummy
-AZURE_RED_TENANT_ID=dummy
-AZURE_RED_CUSTOM_SCOPE=dummy
-AZURE_RED_CLIENT_SECRET=dummy
-AZURE_RED_EXPOSED_SCOPE=dummy
+B_SECRET_KEY=dummy
+B_AZURE_CLIENT_ID=dummy
+B_AZURE_TENANT_ID=dummy
+B_AZURE_CUSTOM_SCOPE=dummy
+B_AZURE_CLIENT_SECRET=dummy
+B_AZURE_EXPOSED_SCOPE=dummy
 
-# Entra ID 3rd - 🟡 Yellow
-YELLOW_SECRET_KEY=dummy
-AZURE_YELLOW_CLIENT_ID=dummy
-AZURE_YELLOW_TENANT_ID=dummy
-AZURE_YELLOW_CUSTOM_SCOPE=dummy
-AZURE_YELLOW_CLIENT_SECRET=dummy
-AZURE_YELLOW_EXPOSED_SCOPE=dummy
+C_SECRET_KEY=dummy
+C_AZURE_CLIENT_ID=dummy
+C_AZURE_TENANT_ID=dummy
+C_AZURE_CUSTOM_SCOPE=dummy
+C_AZURE_CLIENT_SECRET=dummy
+C_AZURE_EXPOSED_SCOPE=dummy
 
-# Entra ID 4th - 🟢 Green
-GREEN_SECRET_KEY=dummy
-AZURE_GREEN_CLIENT_ID=dummy
-AZURE_GREEN_TENANT_ID=dummy
-AZURE_GREEN_CUSTOM_SCOPE=dummy
-AZURE_GREEN_CLIENT_SECRET=dummy
-AZURE_GREEN_EXPOSED_SCOPE=dummy
+D_SECRET_KEY=dummy
+D_AZURE_CLIENT_ID=dummy
+D_AZURE_TENANT_ID=dummy
+D_AZURE_CUSTOM_SCOPE=dummy
+D_AZURE_CLIENT_SECRET=dummy
+D_AZURE_EXPOSED_SCOPE=dummy
 
-# Entra ID 5th - 🟠 Orange
-ORANGE_SECRET_KEY=dummy
-AZURE_ORANGE_CLIENT_ID=dummy
-AZURE_ORANGE_TENANT_ID=dummy
-AZURE_ORANGE_CUSTOM_SCOPE=dummy
-AZURE_ORANGE_CLIENT_SECRET=dummy
-AZURE_ORANGE_EXPOSED_SCOPE=dummy
+E_SECRET_KEY=dummy
+E_AZURE_CLIENT_ID=dummy
+E_AZURE_TENANT_ID=dummy
+E_AZURE_CUSTOM_SCOPE=dummy
+E_AZURE_CLIENT_SECRET=dummy
+E_AZURE_EXPOSED_SCOPE=dummy
 
-# Entra ID 6th - 🟣 Purple
-PURPLE_SECRET_KEY=dummy
-AZURE_PURPLE_CLIENT_ID=dummy
-AZURE_PURPLE_TENANT_ID=dummy
-AZURE_PURPLE_CUSTOM_SCOPE=dummy
-AZURE_PURPLE_CLIENT_SECRET=dummy
-AZURE_PURPLE_EXPOSED_SCOPE=dummy
+F_SECRET_KEY=dummy
+F_AZURE_CLIENT_ID=dummy
+F_AZURE_TENANT_ID=dummy
+F_AZURE_CUSTOM_SCOPE=dummy
+F_AZURE_CLIENT_SECRET=dummy
+F_AZURE_EXPOSED_SCOPE=dummy
 
 # Servers
 EXPRESS_URL=http://localhost:3001
