docs: error handling

--- a/packages/oauth-entra-id/package.json
+++ b/packages/oauth-entra-id/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oauth-entra-id",
-  "version": "3.1.0-beta.1",
+  "version": "3.1.0-beta.2",
   "description": "🛡️ A secure, performant, and feature-rich OAuth 2.0 integration for Microsoft Entra ID — fully abstracted and production-ready.",
   "homepage": "https://github.com/oauth-entra-id/oauth-entra-id",
   "repository": {
@@ -84,5 +84,5 @@
     "vitest": "^3.2.4"
   },
   "license": "MIT",
-  "keywords": ["auth", "oauth2", "typescript", "microsoft", "entra-id", "azure", "jwt", "express", "nestjs"]
+  "keywords": ["auth", "oauth2", "secure", "typescript", "microsoft", "entra-id", "azure", "jwt", "express", "nestjs"]
 }
