--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "start": "turbo run start",
     "build": "turbo run build",
     "dev": "turbo run dev --filter=./examples/*",
-    "format": "pnpm biome format --write .",
-    "lint": "pnpm biome lint --write .",
-    "check": "pnpm biome check --write .",
+    "format": "pnpm biome format",
+    "lint": "pnpm biome lint",
+    "check": "pnpm biome check",
     "typecheck": "turbo run typecheck",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.0.6",
     "husky": "^9.1.7",
     "turbo": "^2.5.4"
   },
