--- a/packages/oauth-entra-id/package.json
+++ b/packages/oauth-entra-id/package.json
@@ -45,12 +45,21 @@
   },
   "typesVersions": {
     "*": {
-      "*": ["./dist/index.d.ts"],
-      "express": ["./dist/express.d.ts"],
-      "nestjs": ["./dist/nestjs.d.ts"]
+      "*": [
+        "./dist/index.d.ts"
+      ],
+      "express": [
+        "./dist/express.d.ts"
+      ],
+      "nestjs": [
+        "./dist/nestjs.d.ts"
+      ]
     }
   },
-  "files": ["dist", "README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "sideEffects": false,
   "scripts": {
     "build": "tsup",
@@ -84,5 +93,16 @@
     "vitest": "^3.2.4"
   },
   "license": "MIT",
-  "keywords": ["auth", "oauth2", "secure", "typescript", "microsoft", "entra-id", "azure", "jwt", "express", "nestjs"]
+  "keywords": [
+    "auth",
+    "oauth2",
+    "secure",
+    "typescript",
+    "microsoft",
+    "entra-id",
+    "azure",
+    "jwt",
+    "express",
+    "nestjs"
+  ]
 }
