--- a/examples/frontend-react/package.json
+++ b/examples/frontend-react/package.json
@@ -21,9 +21,6 @@
     "@tanstack/react-form": "^1.12.4",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
-    "@tanstack/react-router": "^1.124.0",
-    "@tanstack/react-router-devtools": "^1.124.0",
-    "@tanstack/router-plugin": "^1.124.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +28,7 @@
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.3",
     "react-scan": "^0.4.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
