chore: 2 apps in front

--- a/.env.example
+++ b/.env.example
@@ -3,47 +3,45 @@ NODE_ENV=development
 REVERSE_PROXIES=0
 TENANT_IN_USE=dummy
 
-A_SECRET_KEY=dummy
-A_AZURE_CLIENT_ID=dummy
-A_AZURE_TENANT_ID=dummy
-A_AZURE_CUSTOM_SCOPE=dummy
-A_AZURE_CLIENT_SECRET=dummy
-A_AZURE_EXPOSED_SCOPE=dummy
+YELLOW_SECRET_KEY=dummy
+RED_SECRET_KEY=dummy
+BLUE_SECRET_KEY=dummy
 
-B_SECRET_KEY=dummy
-B_AZURE_CLIENT_ID=dummy
-B_AZURE_TENANT_ID=dummy
-B_AZURE_CUSTOM_SCOPE=dummy
-B_AZURE_CLIENT_SECRET=dummy
-B_AZURE_EXPOSED_SCOPE=dummy
+YELLOW1_AZURE_CLIENT_ID=dummy
+YELLOW1_AZURE_TENANT_ID=dummy
+YELLOW1_AZURE_CUSTOM_SCOPE=dummy
+YELLOW1_AZURE_CLIENT_SECRET=dummy
+YELLOW1_AZURE_EXPOSED_SCOPE=dummy
 
-C_SECRET_KEY=dummy
-C_AZURE_CLIENT_ID=dummy
-C_AZURE_TENANT_ID=dummy
-C_AZURE_CUSTOM_SCOPE=dummy
-C_AZURE_CLIENT_SECRET=dummy
-C_AZURE_EXPOSED_SCOPE=dummy
+RED1_AZURE_CLIENT_ID=dummy
+RED1_AZURE_TENANT_ID=dummy
+RED1_AZURE_CUSTOM_SCOPE=dummy
+RED1_AZURE_CLIENT_SECRET=dummy
+RED1_AZURE_EXPOSED_SCOPE=dummy
 
-D_SECRET_KEY=dummy
-D_AZURE_CLIENT_ID=dummy
-D_AZURE_TENANT_ID=dummy
-D_AZURE_CUSTOM_SCOPE=dummy
-D_AZURE_CLIENT_SECRET=dummy
-D_AZURE_EXPOSED_SCOPE=dummy
+BLUE1_AZURE_CLIENT_ID=dummy
+BLUE1_AZURE_TENANT_ID=dummy
+BLUE1_AZURE_CUSTOM_SCOPE=dummy
+BLUE1_AZURE_CLIENT_SECRET=dummy
+BLUE1_AZURE_EXPOSED_SCOPE=dummy
 
-E_SECRET_KEY=dummy
-E_AZURE_CLIENT_ID=dummy
-E_AZURE_TENANT_ID=dummy
-E_AZURE_CUSTOM_SCOPE=dummy
-E_AZURE_CLIENT_SECRET=dummy
-E_AZURE_EXPOSED_SCOPE=dummy
+YELLOW2_AZURE_CLIENT_ID=dummy
+YELLOW2_AZURE_TENANT_ID=dummy
+YELLOW2_AZURE_CUSTOM_SCOPE=dummy
+YELLOW2_AZURE_CLIENT_SECRET=dummy
+YELLOW2_AZURE_EXPOSED_SCOPE=dummy
 
-F_SECRET_KEY=dummy
-F_AZURE_CLIENT_ID=dummy
-F_AZURE_TENANT_ID=dummy
-F_AZURE_CUSTOM_SCOPE=dummy
-F_AZURE_CLIENT_SECRET=dummy
-F_AZURE_EXPOSED_SCOPE=dummy
+RED2_AZURE_CLIENT_ID=dummy
+RED2_AZURE_TENANT_ID=dummy
+RED2_AZURE_CUSTOM_SCOPE=dummy
+RED2_AZURE_CLIENT_SECRET=dummy
+RED2_AZURE_EXPOSED_SCOPE=dummy
+
+BLUE2_AZURE_CLIENT_ID=dummy
+BLUE2_AZURE_TENANT_ID=dummy
+BLUE2_AZURE_CUSTOM_SCOPE=dummy
+BLUE2_AZURE_CLIENT_SECRET=dummy
+BLUE2_AZURE_EXPOSED_SCOPE=dummy
 
 # Servers
 EXPRESS_URL=http://localhost:3001
