--- a/examples/server-nestjs/package.json
+++ b/examples/server-nestjs/package.json
@@ -27,13 +27,14 @@
     "oauth-entra-id": "workspace:*",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "zod": "^4.0.15"
+    "zod": "^4.0.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.7",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.2.0",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.2.1",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
