--- a/packages/oauth-entra-id/tsconfig.json
+++ b/packages/oauth-entra-id/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "OAuth2.0 Entra ID Package",
+  "display": "OAuth Entra ID",
   "compilerOptions": {
     /* Projects */
     "composite": false,
