--- a/packages/oauth-entra-id/tsconfig.json
+++ b/packages/oauth-entra-id/tsconfig.json
@@ -2,53 +2,28 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "OAuth Entra ID",
   "compilerOptions": {
-    /* Projects */
     "composite": false,
-
-    /* Language and Environment */
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "target": "es2022",
     "moduleDetection": "force",
-
-    /* Modules */
-    "module": "Preserve",
+    "module": "esnext",
     "rootDir": ".",
-    "moduleResolution": "Node",
-    "baseUrl": ".",
+    "moduleResolution": "bundler",
     "paths": {
       "~/*": ["./src/*"]
     },
     "types": ["node"],
     "resolveJsonModule": true,
-
-    /* JavaScript Support */
     "allowJs": false,
-
-    /* Emit */
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "outDir": "./dist",
-    "removeComments": false,
+    "noEmit": true,
     "preserveWatchOutput": true,
     "verbatimModuleSyntax": true,
-    "inlineSources": false,
-
-    /* Interop Constraints */
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-
-    /* Type Checking */
     "strict": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
-
-    /* Completeness */
     "skipLibCheck": true
   },
   "include": ["src"],
