feat: no check for null refresh token

--- a/examples/server-fastify/tsconfig.json
+++ b/examples/server-fastify/tsconfig.json
@@ -11,9 +11,9 @@
     "moduleDetection": "force",
 
     /* Modules */
-    "module": "CommonJS",
+    "module": "ESNext",
     "rootDir": ".",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "paths": {
       "~/*": ["./src/*"]
     },
